# fullstack-rag-agent-thought-app

./: AGENT_INTEGRATION.md  COMMANDS.md  QUICKSTART.md  README.md  agentic-rag-app.excalidraw  compose.yml
backend/: .env.example  check_setup.py  foo.ipynb  pyproject.toml  run.sh  test_agent.py  test_timeout_fix.py
backend/.ipynb_checkpoints/: foo-checkpoint.ipynb
backend/src/: config.py  dependencies.py  main.py
backend/src/router/: ask.py  aws.py  document.py  user.py
backend/src/router/chat/: chat.py  user.py
backend/src/router/database/: mongodb.py  postgres.py
backend/src/schema/document/: models.py
backend/src/schema/embeddings/: jina.py
backend/src/schema/llm/: models.py
backend/src/schema/user/: document.py  models.py
backend/src/services/agent/: agent.py  factory.py  nodes.py  orchestrator.py  prompts.py  tools.py
backend/src/services/agent/nodes/: __init__.py  answer_generation.py  document_grading.py  query_generation.py  question_rewrite.py
backend/src/services/chat/: agent.py  factory.py  openai_client.py  prompts.py
backend/src/services/database/: aws_client.py  factory.py  milvus_client.py  mongo_client.py  postgres_client.py
backend/src/services/database/postgres/: __init__.py  database_operations.py  sync_operations.py  table_operations.py  validators.py
backend/src/services/database/postgres_utils/: __init__.py  (+3 more)
backend/src/services/embedding/: factory.py  jina_client.py
backend/src/services/parser/: factory.py  parser.py  pipeline.py
backend/src/utils/: __init__.py  error_handler.py  response_formatter.py
(+52 files in other folders)
