[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "docling>=2.60.0",
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "langchain-openai>=1.0.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
