[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "docling>=2.60.1",
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-docling>=1.1.0",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.35",
    "langfuse>=3.10.0",
    "langgraph>=1.0.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymilvus[model]>=2.6.3",
    "pymongo>=4.15.3",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
]
